# Master-Simulation

./: .gitmodules  CMakeLists.txt  Readme.md  cv_kpr.h  k_MF_T0.00625mu0.6.json  main.cpp  sundials_test.cpp  test.cpp  test.sh
Google_tests/: CMakeLists.txt
Libraries/Computation/: PhaseDiagram.h
Libraries/GraphLibrary/: CMakeLists.txt  Graph.cpp  Leaf.cpp
Libraries/GraphLibrary/include/: Graph.h  GraphLibrary_Types.h  Leaf.h  Leaf3.h  Tree.h  TreeWithBlocking.h  TreeWithComparisons.h  TreeWithCoordinates.h  TreeWithData.h  TreeWithNeighbours.h  TreeWithRecursiveComputation.h  Types.h  Types_Leaf.h
Libraries/GraphLibrary/tests/: Data.cpp  GraphTest.cpp  LeafIntegrationTest.cpp  LeafTest.cpp  LeafTestBlockedTiles.cpp  LeafTestOnData.cpp  LeaveTest.cpp  PlotCalculationTest.cpp  TestData.cpp  Tree.cpp  TreeWithComparisons.cpp  TreeWithCoordinates.cpp  TreeWithData.cpp  TreeWithNeighbours.cpp  TreeWithRecursiveComputation.cpp
Libraries/GraphLibrary/tests/data/: data.csv  data_with_blocking.csv
Libraries/GraphLibrary/tests/include/: TestData.h
Libraries/Potential/: CMakeLists.txt  Flow.cpp  Potential.cpp  Solver.cpp  System.cpp
Libraries/Potential/include/: Config.h  Flow.h  Potential.h  System.h  Types_Potential.h
Libraries/Potential/tests/: 1_plus_1_MF.cpp  1_plus_1_N=1.cpp  1_plus_1_N=2.cpp  Get_Test_Data.cpp  Test_Config.cpp  Test_Flow.cpp  Test_System.cpp  Test_multiple_1_plus_1_flows.cpp  Test_with_Source.cpp
Libraries/Potential/tests/data/: flow_N=2,T=0.1,mu=0.1.json  flow_N=2,T=0.1,mu=0.1.txt  one_plus_zero_parser.py
Libraries/Potential/tests/include/: Get_Test_Data.h  Heat_Equation_Config_Base.h
Modules/: Graph.cpp  Graph.h  Leave.cpp  Leave.h  Types.h
include/: fix_boost_depricadet.h
